HBM 1.6.0 and bug fixes.
1. Fixed the Experiments page Update
-Fixed the footer images not working.
-Fixed the content expanders not working.
-Fixed the topbar not working properly.
2. Fixed the massive break on the HBM Changelog Page
3. HBM 1.6.0:
-Added multi-person support test. This may be bugged. Will be released fully in the 1.6.x updates.
-Fixed the ad link being missing.
-Fixed the music toggle.
-The direct link is already fine.
-Backend Optimizations.

--- a/happy-birthday-machine/changelog.css
+++ b/happy-birthday-machine/changelog.css
@@ -128,7 +128,7 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 20vh;
 }
 
 .parallax-2 {
